Finalize refactoring of `ContractCallServicePrecompileTest` (#9022)
This PR finalizes the refactoring of ContractCallServicePrecompileTest by using entirely the web3j library and remove the dependency from ContractCallTestSetup.

All historical tests are extracted in a separate class and are going to be refactored in a future work.

---------

Signed-off-by: IvanKavaldzhiev <ivankavaldzhiev@gmail.com>